--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,27 @@
-name: Python application test with Github Action
+name: Python application test with Github Actions
 
 on: [push]
-jobs: 
+
+jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: action/setup-python@v1
-        with:
-          python-version: 3.10
-      - name: Install dependencies
-        run: |
-          make install
-      - name: Lint with pylint
-        run: |
-          make lint
-      - name: Test eith pytest
-        run: |
-          make test
-      - name: Format with Python Black
-        run: |
-          make foramt
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        make install
+    - name: Lint with pylint
+      run: |
+        make lint
+    - name: Test with pytest
+      run: |
+        make test
+    - name: Format code
+      run: |
+        make format
